--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="dist/style.css">
   <title>Frontend Mentor | E-commerce product page</title>
 
@@ -16,12 +17,42 @@
 </head>
 <body>
 
-  Collections
-  Men
-  Women
-  About
-  Contact
+  <header class="header">
 
+    <nav class="flex flex-jc-sb">
+      <div class="flex">
+        <a href="#" class="header__menu">
+          <span></span>
+          <span></span>
+          <span></span>
+        </a>
+        <a href="/" class="header__logo">
+          <img src="/images/logo.svg" alt="sneakers">
+        </a>
+
+        <div class="header__links">
+          <a href="#">Collections</a>
+          <a href="#">Men</a>
+          <a href="#">Women</a>
+          <a href="#">About</a>
+          <a href="#">Contact</a>
+          <href></href>
+        </div>
+      </div>
+
+      <div class="flex flex-ai-c">
+        <a href="/" class="header__cart">
+          <img src="/images/icon-cart.svg" alt="shopping cart">
+        </a>
+        <a href="/" class="header__user-avatar">
+          <img src="/images/image-avatar.png" alt="your account">
+        </a>
+      </div>
+
+    </nav>
+  </header>
+
+  <!--
   Sneaker Company
 
   Fall Limited Edition Sneakers
@@ -35,11 +66,14 @@
 
   0
   Add to cart
+
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+
+  -->
   <script src="./app/js/script.js"></script>
 </body>
 </html>
