implement changes in nav menu desktop view

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <header class="header">
 
     <nav class="flex flex-jc-sb">
-      <div class="flex">
-        <a href="#" class="header__menu">
+      <div class="flex flex-ai-c">
+        <a href="#" class="header__menu hide-for-desktop">
           <span></span>
           <span></span>
           <span></span>
@@ -30,7 +30,7 @@
           <img src="/images/logo.svg" alt="sneakers">
         </a>
 
-        <div class="header__links">
+        <div class="header__links hide-for-mobile">
           <a href="#">Collections</a>
           <a href="#">Men</a>
           <a href="#">Women</a>
